//
// Created by ramon on 11/12/19.
//

#ifndef CPLUSPLUS_MAIN_HPP
#define CPLUSPLUS_MAIN_HPP
#include <SFML/Graphics.hpp>


class main {

};


#endif //CPLUSPLUS_MAIN_HPP
